Correction gap menu mobile

--- a/rmr-m-frontend/src/App.css
+++ b/rmr-m-frontend/src/App.css
@@ -40,6 +40,7 @@ body {
   /* Suppression du décalage vers la droite */
   left: 0;
   transform: none;
+  gap: 0px;
 }
 
 /* Styles des liens */
